<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gold\'s Mine</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Layout -->
    <string name="tael">Tael</string>
    <string name="small_tael">Small Tael</string>
	<string name="type_gold">Type Gold</string>    
    <string name="form_hint_price">Price</string>
    <string name="form_hint_date">Date</string>
    
    <!-- Button -->
    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>
    <string name="button_calendar">Calendar</string>
    
    <!-- Description -->
    <string name="description_logo">logo</string>
	<string name="description_grid_home">menu</string>
	<string name="description_save_history">save history</string>
	
	<!-- Title Dialog -->
	<string name="title_delete">Delete</string>
	<string name="title_error">An Error Occurred</string>
	<string name="title_exit">Exit</string>
	
	<!-- Message -->
	<string name="message_exit">Do you want exit?</string>
	<string name="message_empty_first">No data, click  </string>
	<string name="message_empty_second">  to create data</string>
	<string name="message_ask_delete">Are you want delete this item?</string>
	<string name="message_delete_success">Delete successful</string>
	<string name="message_error_empty_tael">Empty Tael</string>
	<string name="message_error_empty_price">Empty Price</string>
	<string name="message_error_empty_date">Empty Date</string>
	<string name="message_insert_success">Insert Successful</string>
	
	<!-- Alert -->
	<string name="close">Close</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	
	<!-- Navigation Draw -->
	<string name="open_nav">Open</string>
	<string name="close_nav">Close</string>
	
	<!-- Menu Other -->
	<string name="sort">Sort</string>
	<string name="refesh">Refesh</string>
	
	<!-- Menu Section String -->
	<string name="section_gold">Gold</string>
	<string name="section_dashboard">Dashboard</string>
	<string name="section_configuration">Configuration</string>
	
	<!-- Menu Item String -->
	<string name="add_gold">Add Gold</string>
	<string name="list_gold">List Gold</string>
	<string name="statistics_gold">Statistics Gold</string>
	<string name="chart_gold">Chart Gold</string>
	
	<string name="update_gold">Synchronize Gold</string>
	<string name="update_currency">Synchronize Currency</string>
	
	<string name="setting">Setting</string>
	<string name="information">Information</string>
	<string name="exit">Exit</string>
	
	<!-- Menu Grid Home -->
	<string-array name="menu_home_text">
	    <item>@string/add_gold</item>
	    <item>@string/list_gold</item>
	    <item>@string/statistics_gold</item>
	    <item>@string/chart_gold</item>
	    <item>@string/setting</item>
	    <item>@string/exit</item>
	</string-array>
	
	<string-array name="menu_fragment">
	    <item>vn.luis.goldsmine.golduser.AddGoldUserFragment</item> <!-- Add Gold -->
	    <item>vn.luis.goldsmine.golduser.ListGoldUserFragment</item> <!-- List Gold -->
	    <item>vn.luis.goldsmine.golduser.StatisticsGoldUserFragment</item> <!-- Statistics Gold -->
	    <item>vn.luis.goldsmine.golduser.ChartGoldUserFragment</item> <!-- Chart Gold -->
	    <item>vn.luis.goldsmine.configuration.SettingFragment</item> <!-- Setting -->
	    <item>vn.luis.goldsmine.configuration.InformationFragment</item> <!-- Information -->
	</string-array>
	
	<!-- Sort List Gold User-->
	<string-array name="array_sort">
	    <item>No Sorting</item>
	    <item>Sorting Anumb Ascending</item>
	    <item>Sorting Anumb Descending</item>
	    <item>Sorting Price Ascending</item>
	    <item>Sorting Price Descending</item>
	</string-array>
	
	<!-- Array Type Gold -->
	<string-array name="array_type_gold">
	    <item>Gold SJC (Normal)</item>
	    <item>Gold Ring SJC 99,99</item>
	    <item>Gold 24 K</item>
	    <item>Gold 18 K</item>
	    <item>Gold 14 K</item>
	</string-array>
</resources>
